--- a/ReactProject/Invoice Generator/package.json
+++ b/ReactProject/Invoice Generator/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "firebase": "^10.12.2",
     "jspdf": "^2.5.1",
+    "jspdf-autotable": "^3.8.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.23.1"
