--- a/ReactProject/Invoice Generator/package.json
+++ b/ReactProject/Invoice Generator/package.json
@@ -15,7 +15,8 @@
     "jspdf-autotable": "^3.8.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.23.1"
+    "react-router-dom": "^6.23.1",
+    "react-to-print": "^2.15.1"
   },
   "devDependencies": {
     "@types/react": "^18.2.66",
